--- a/src/assets/scss/layout/_navbar.scss
+++ b/src/assets/scss/layout/_navbar.scss
@@ -8,7 +8,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: z('sticky');
 
     .navbar-container {
         display: flex;
