feat: implement ErrorBoundary component for error handling and update styles

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,6 +19,7 @@
 // 4. Components
 @import 'components/circular-progress-bar';
 @import 'components/basic-popup';
+@import 'components/error-boundary';
 
 // 5. Pages
 @import 'pages/home';
