--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -64,3 +64,11 @@ $z-modal-backdrop: 1040;
 $z-modal: 1050;
 $z-popover: 1060;
 $z-tooltip: 1070;
+
+// Error Boundary Colors
+$error-color-1: #ff6b6b;
+$error-color-2: #d63031;
+$error-bg-1: #ffe0e0;
+$error-border-1: #ff6b6b;
+$error-button-bg-1: #0984e3;
+$error-button-bg-2: #0770c4;
