--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'components/circular-progress-bar';
 @import 'components/basic-popup';
 @import 'components/error-boundary';
+@import 'components/basic-accordion';
 
 // 5. Pages
 @import 'pages/home';
