feat: basic checkbox

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/basic-popup';
 @import 'components/error-boundary';
 @import 'components/basic-accordion';
+@import 'components/basic-checkbox';
 
 // 5. Pages
 @import 'pages/home';
