feat: add basic chip component with styles and demo page

--- a/src/assets/scss/abstracts/_functions.scss
+++ b/src/assets/scss/abstracts/_functions.scss
@@ -1,5 +1,6 @@
 // =============================================================================
 // FUNCTIONS
+//  this should be use for calculations
 // =============================================================================
 
 // Color Functions
