--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'components/error-boundary';
 @import 'components/basic-accordion';
 @import 'components/basic-checkbox';
+@import 'components/basic-chip';
 
 // 5. Pages
 @import 'pages/home';
