feat: integrate side panel for navigation and update Navbar component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'components/basic-checkbox';
 @import 'components/basic-chip';
 @import 'components/basic-radio';
+@import 'components/side-panel';
 
 // 5. Pages
 @import 'pages/home';
