--- a/src/assets/scss/layout/_navbar.scss
+++ b/src/assets/scss/layout/_navbar.scss
@@ -24,6 +24,9 @@
     }
 
     .navbar-brand {
+        display: flex;
+        align-items: center;
+
         .navbar-logo {
             color: $primary-color;
             font-size: 1.5rem;
