feat: add basic range component with styles, demo page, and integrate into routing

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -82,3 +82,6 @@ $error-button-bg-2: #0770c4;
 
 // Radio Variables
 @import 'variables/radio-variables';
+
+// Range Variables
+@import 'variables/range-variables';
