WIP: decrypted import replacement with use/forword

--- a/src/assets/scss/abstracts/_breakpoints.scss
+++ b/src/assets/scss/abstracts/_breakpoints.scss
@@ -1,6 +1,9 @@
 // =============================================================================
 // BREAKPOINTS
 // =============================================================================
+@use '../abstracts/variables' as *;
+@use '../abstracts/functions' as *;
+@use '../abstracts/mixins' as *;
 
 // Breakpoint Variables
 $breakpoints: (
