--- a/src/assets/scss/abstracts/variables/_accordion-variables.scss
+++ b/src/assets/scss/abstracts/variables/_accordion-variables.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // ACCORDION VARIABLES - COMPLETE SYSTEM
 // =============================================================================
+@use '../variables' as *;
 
 // Accordion chip variables
 $accordion-bg-1: $white;
