--- a/src/assets/scss/abstracts/variables/_chip-variables.scss
+++ b/src/assets/scss/abstracts/variables/_chip-variables.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // CHIP VARIABLES - COMPLETE SYSTEM
 // =============================================================================
+@use '../variables' as *;
 
 // Base chip variables
 $chip-variants: (
