--- a/src/assets/scss/abstracts/variables/_radio-variables.scss
+++ b/src/assets/scss/abstracts/variables/_radio-variables.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // RADIO VARIABLES - COMPLETE SYSTEM
 // =============================================================================
+@use '../variables' as *;
 
 // Radio size variables
 $radio-sizes: (
