--- a/src/assets/scss/abstracts/variables/_range-variables.scss
+++ b/src/assets/scss/abstracts/variables/_range-variables.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // RANGE COMPONENT VARIABLES
 // =============================================================================
+@use '../variables' as *;
 
 // Colors
 $range-track-color: #e9ecef !default;
