--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // BASE STYLES
 // =============================================================================
+@use '../abstracts' as *;
 
 // Root element
 :root {
