--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // CSS RESET
 // =============================================================================
+@use '../abstracts' as *;
 
 // Box sizing rules
 *,
