--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // TYPOGRAPHY
 // =============================================================================
+@use '../abstracts' as *;
 
 // Heading Styles
 h1,
