--- a/src/assets/scss/components/_basic-chip.scss
+++ b/src/assets/scss/components/_basic-chip.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // BASIC CHIP COMPONENT STYLES
 // =============================================================================
+@use '../abstracts' as *;
 
 .basic-chip {
     display: inline-flex;
