--- a/src/assets/scss/components/_basic-radio.scss
+++ b/src/assets/scss/components/_basic-radio.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // BASIC RADIO COMPONENT STYLES
 // =============================================================================
+@use '../abstracts' as *;
 
 .radio-container {
   display: flex;
