--- a/src/assets/scss/components/_basic-range.scss
+++ b/src/assets/scss/components/_basic-range.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // BASIC RANGE COMPONENT
 // =============================================================================
+@use '../abstracts' as *;
 
 .basic-slider-input-wrapper {
     width: 100%;
