--- a/src/assets/scss/components/_error-boundary.scss
+++ b/src/assets/scss/components/_error-boundary.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // ERROR BOUNDARY COMPONENT
 // =============================================================================
+@use '../abstracts' as *;
 
 .error-boundary {
     padding: 1rem;
