--- a/src/assets/scss/layout/_navbar.scss
+++ b/src/assets/scss/layout/_navbar.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // NAVBAR LAYOUT
 // =============================================================================
+@use '../abstracts' as *;
 
 .navbar {
     background-color: $white;
