--- a/src/assets/scss/pages/_auth.scss
+++ b/src/assets/scss/pages/_auth.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // AUTH PAGE
 // =============================================================================
+@use '../abstracts' as *;
 
 .auth-page {
     min-height: 100vh;
