--- a/src/assets/scss/pages/_not-found.scss
+++ b/src/assets/scss/pages/_not-found.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // NOT FOUND PAGE
 // =============================================================================
+@use '../abstracts' as *;
 
 .not-found-page {
     min-height: 100vh;
