--- a/src/assets/scss/pages/_radio-demo.scss
+++ b/src/assets/scss/pages/_radio-demo.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // RADIO DEMO PAGE STYLES
 // =============================================================================
+@use '../abstracts' as *;
 
 .radio-demo {
     max-width: 1200px;
