--- a/src/assets/scss/components/_basic-checkbox.scss
+++ b/src/assets/scss/components/_basic-checkbox.scss
@@ -3,6 +3,7 @@
 // =============================================================================
 // This file contains all styles for the BasicCheckbox component.
 // The checkbox supports multiple sizes, disabled/readonly states, and custom styling.
+@use '../abstracts' as *;
 
 .checkbox-container {
 
