--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // =============================================================================
 // VARIABLES
 // =============================================================================
+@use "sass:color";
 
 // Color Palette
 $primary-color: #007bff;
@@ -13,10 +14,10 @@ $light-color: #f8f9fa;
 $dark-color: #343a40;
 
 // Color Variations
-$primary-light: lighten($primary-color, 10%);
-$primary-dark: darken($primary-color, 10%);
-$secondary-light: lighten($secondary-color, 10%);
-$secondary-dark: darken($secondary-color, 10%);
+$primary-light: color.scale($primary-color, $lightness: 10%);
+$primary-dark: color.scale($primary-color, $lightness: -10%);
+$secondary-light: color.scale($secondary-color, $lightness: 10%);
+$secondary-dark: color.scale($secondary-color, $lightness: -10%);
 
 // Neutral Colors
 $white: #ffffff;
