--- a/src/assets/scss/abstracts/_functions.scss
+++ b/src/assets/scss/abstracts/_functions.scss
@@ -4,6 +4,7 @@
 // =============================================================================
 @use '../abstracts/variables' as *;
 @use '../abstracts/mixins' as *;
+@use "sass:map";
 
 // Color Functions
 @function color($color-name, $variant: 'base') {
@@ -14,10 +15,10 @@
     );
 
 @if map-has-key($color-map, $color-name) {
-    $color-variants: map-get($color-map, $color-name);
+    $color-variants: map.get($color-map, $color-name);
 
     @if map-has-key($color-variants, $variant) {
-        @return map-get($color-variants, $variant);
+        @return map.get($color-variants, $variant);
     }
 }
 
@@ -38,7 +39,7 @@
     );
 
 @if map-has-key($z-index-map, $layer) {
-    @return map-get($z-index-map, $layer);
+    @return map.get($z-index-map, $layer);
 }
 
 @warn "Z-index layer '#{$layer}' not found.";
