--- a/src/assets/scss/components/_basic-checkbox.scss
+++ b/src/assets/scss/components/_basic-checkbox.scss
@@ -16,13 +16,15 @@
         box-sizing: border-box;
     }
 
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    cursor: pointer;
-    user-select: none;
-    color: #000000;
-    position: relative;
+    &{
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        cursor: pointer;
+        user-select: none;
+        color: #000000;
+        position: relative;
+    }
 
     // =============================================================================
     // HIDDEN INPUT STYLES
