feat: add BasicBreadcrumb component with styles, demo page, and integrate into routing

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,6 +19,7 @@
 @use 'components/basic-chip';
 @use 'components/basic-radio';
 @use 'components/basic-range';
+@use 'components/basic-breadcrumb';
 @use 'components/side-panel';
 
 // 5. Pages
@@ -27,6 +28,7 @@
 @use 'pages/not-found';
 @use 'pages/radio-demo';
 @use 'pages/range-demo';
+@use 'pages/breadcrumb-demo';
 
 // 6. Utilities (should be last for specificity)
 @use 'utilities/spacing';
