feat: add Loader component with styles, demo page, and integrate into routing

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -21,6 +21,7 @@
 @use 'components/basic-range';
 @use 'components/basic-breadcrumb';
 @use 'components/linear-progress';
+@use 'components/loader';
 @use 'components/side-panel';
 
 // 5. Pages
@@ -31,6 +32,7 @@
 @use 'pages/range-demo';
 @use 'pages/breadcrumb-demo';
 @use 'pages/linear-progress-demo';
+@use 'pages/loader-demo';
 
 // 6. Utilities (should be last for specificity)
 @use 'utilities/spacing';
