feat: add BasicSlider component with styles, demo page, and integrate into routing

--- a/src/assets/scss/abstracts/index.scss
+++ b/src/assets/scss/abstracts/index.scss
@@ -8,6 +8,7 @@
 @forward 'variables/chip-variables';
 @forward 'variables/radio-variables';
 @forward 'variables/range-variables';
+@forward 'variables/slider-variables';
 
 // functions
 @forward 'functions';
@@ -17,6 +18,7 @@
 @forward 'mixins/chip-mixins';
 @forward 'mixins/radio-mixins';
 @forward 'mixins/range-mixins';
+@forward 'mixins/slider-mixins';
 
 // breakpoints
 @forward 'breakpoints';
