--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -21,6 +21,7 @@
 @use 'components/basic-range';
 @use 'components/basic-slider';
 @use 'components/slider-group';
+@use 'components/basic-switch';
 @use 'components/basic-breadcrumb';
 @use 'components/linear-progress';
 @use 'components/loader';
@@ -34,6 +35,7 @@
 @use 'pages/range-demo';
 @use 'pages/slider-demo';
 @use 'pages/slider-group-demo';
+@use 'pages/switch-demo';
 @use 'pages/breadcrumb-demo';
 @use 'pages/linear-progress-demo';
 @use 'pages/loader-demo';
