feat: tabs component

--- a/src/assets/scss/abstracts/index.scss
+++ b/src/assets/scss/abstracts/index.scss
@@ -10,6 +10,7 @@
 @forward 'variables/range-variables';
 @forward 'variables/slider-variables';
 @forward 'variables/switch-variables';
+@forward 'variables/tabs-variables';
 
 // functions
 @forward 'functions';
@@ -21,6 +22,7 @@
 @forward 'mixins/range-mixins';
 @forward 'mixins/slider-mixins';
 @forward 'mixins/switch-mixins';
+@forward 'mixins/tabs-mixins';
 
 // breakpoints
 @forward 'breakpoints';
