--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,6 +22,7 @@
 @use 'components/basic-slider';
 @use 'components/slider-group';
 @use 'components/basic-switch';
+@use 'components/basic-tabs';
 @use 'components/basic-breadcrumb';
 @use 'components/linear-progress';
 @use 'components/loader';
@@ -36,6 +37,7 @@
 @use 'pages/slider-demo';
 @use 'pages/slider-group-demo';
 @use 'pages/switch-demo';
+@use 'pages/tabs-demo';
 @use 'pages/breadcrumb-demo';
 @use 'pages/linear-progress-demo';
 @use 'pages/loader-demo';
