feat: update BasicSwitch component styles and remove default color override

--- a/src/assets/scss/components/_basic-switch.scss
+++ b/src/assets/scss/components/_basic-switch.scss
@@ -105,7 +105,5 @@
     }
 
     // Default color (when no color class is applied)
-    &:not([class*='color-']) {
-        @include switch-color('default');
-    }
+    // Removed default color override to allow custom CSS variables to work
 }
