feat: add tooltip component with demo and styles

--- a/src/assets/scss/abstracts/index.scss
+++ b/src/assets/scss/abstracts/index.scss
@@ -11,6 +11,7 @@
 @forward 'variables/slider-variables';
 @forward 'variables/switch-variables';
 @forward 'variables/tabs-variables';
+@forward 'variables/tooltip-variables';
 
 // functions
 @forward 'functions';
@@ -23,6 +24,7 @@
 @forward 'mixins/slider-mixins';
 @forward 'mixins/switch-mixins';
 @forward 'mixins/tabs-mixins';
+@forward 'mixins/tooltip-mixins';
 
 // breakpoints
 @forward 'breakpoints';
