--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,6 +17,7 @@
 @use 'components/basic-accordion';
 @use 'components/basic-checkbox';
 @use 'components/basic-chip';
+@use 'components/basic-input';
 @use 'components/basic-radio';
 @use 'components/basic-range';
 @use 'components/basic-slider';
@@ -47,6 +48,7 @@
 @use 'pages/tooltip-demo';
 @use 'pages/vertical-app-bar-demo';
 @use 'pages/toast-demo';
+@use 'pages/input-demo';
 
 // 6. Utilities (should be last for specificity)
 @use 'utilities/spacing';
