feat: add BasicSnackbar component with styles, demo, and notification system integration

--- a/src/assets/scss/abstracts/index.scss
+++ b/src/assets/scss/abstracts/index.scss
@@ -13,6 +13,7 @@
 @forward 'variables/tabs-variables';
 @forward 'variables/tooltip-variables';
 @forward 'variables/toast-variables';
+@forward 'variables/snackbar-variables';
 
 // functions
 @forward 'functions';
@@ -27,6 +28,7 @@
 @forward 'mixins/tabs-mixins';
 @forward 'mixins/tooltip-mixins';
 @forward 'mixins/toast-mixins';
+@forward 'mixins/snackbar-mixins';
 
 // breakpoints
 @forward 'breakpoints';
