feat: add BasicPagination component with demo, styles, and integration into the application

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -34,6 +34,7 @@
 @use 'components/basic-tooltip';
 @use 'components/toast';
 @use 'components/basic-snackbar';
+@use 'components/basic-pagination';
 
 // 5. Pages
 @use 'pages/home';
@@ -55,6 +56,7 @@
 @use 'pages/file-input-demo';
 @use 'pages/textarea-demo';
 @use 'pages/snackbar-demo';
+@use 'pages/pagination-demo';
 
 // 6. Utilities (should be last for specificity)
 @use 'utilities/spacing';
