--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -35,6 +35,7 @@
 @use 'components/toast';
 @use 'components/basic-snackbar';
 @use 'components/basic-pagination';
+@use 'components/basic-table';
 
 // 5. Pages
 @use 'pages/home';
@@ -57,6 +58,7 @@
 @use 'pages/textarea-demo';
 @use 'pages/snackbar-demo';
 @use 'pages/pagination-demo';
+@use 'pages/table-demo';
 
 // 6. Utilities (should be last for specificity)
 @use 'utilities/spacing';
